--- a/js/pages/room/note.html
+++ b/js/pages/room/note.html
@@ -1,49 +1,11 @@
-<style>
-.note {
-    padding: 10px 15px;
-    margin: 0px;
-    background: #fff;
-    height: 80vh;
-    overflow-y: auto;
-}
-
-.note ul {
-    list-style-type: none;
-    font-weight: 100;
-    padding-left: 0px;
-    margin-top: 15px 10px 15px 20px;
-}
-
-.note li {
-    margin-bottom: 8px;
-}
-</style>
-<div class="note">
-    <h4 class="bs-text-black ">入住条款：</h4>
-    <ul class="bs-text-black bs-text-smaller">
-        <li>1、登记住宿时，须出示居民身份证或其它有关证件，填写好住房登记表，并告知离店日期。
-        </li>
-        <li>2、临时换人必须先到服务台办理手续。一般不允许增加人数（如三人住二人房）。
-        </li>
-        <li>3、退房时间次日中午12点前，超过12点需另加费用。
-        </li>
-        <li>4、亲友来访，不能过夜。最晚不能超过12点间。
-        </li>
-        <li>5、谢绝携带宠物。
-        </li>
-        <li>6 、客房内冰柜里的水果，饮料，酒吧台上的酒水等，属客人自费饮品，并收取服务费，若要饮用，请特别仔细核查相应价格后，才可使用，以免发生误会。
-        </li>
-        <li>7 、若在酒店大堂里或客房里打长途电话，请按宾馆规定的长话费及服务费交纳。
-        </li>
-        <li>8 、贵重物品可以放入房间内的小保险箱，或请导游陪同存入大堂内的保险箱，切勿随意乱放，以免发 生不愉快的事情。
-        </li>
-        <li>9 、酒店是涉外饭店，在宾馆大堂或公共场所请勿大声喧哗，大声喊叫同伴，一般相互交谈三公分外不 应听到。
-        </li>
-        <li>10 、穿着睡衣，拖鞋，请勿穿梭在电梯中，公共场所中。
-        </li>
-        <li>11、房间内请勿乱涂乱写，留言纸放在《服务指南》本子中。
-        </li>
-        <li>12、请严格遵守 “ 七不 ” 规定条例，请勿在禁止吸烟的公共场所吸烟。
-        </li>
-    </ul>
+<div class="content-rule">
+    <div class="content-title">入住条款：</div>
+    <div class="content-text">
+    1. 入住酒店时，请去前台办理入住手续。办理入住手续时，必须出示政府发出的有效身份证件。</div>
+    <div class="content-text">2. 全天房用户请于约定入住结束当天12点前退房，时租房用户，请于时租结束前退房。退房在微信公众号本宿（bensue2016）上完成即可。如需续住请提前联系前台。</div>
+    <!-- <div class="content-text">3. 全天房用户免费提供送房早餐，需要早餐请在微信公众号上呼叫早餐。</div> -->
+    <div class="content-text">3. 本酒店禁止携带宠物。亲友来访不能过夜，最晚不能超过12点。来访亲友请在前台登记。</div>
+    <div class="content-text">4. 请遵守国家法律法规，不要在酒店进行非法活动。</div>
+    <div class="content-text">5. 如需清洁请在微信上点击清洁按钮，服务人员将会到房打扫。</div>
+    <div class="content-text">6.如需其他服务请至联系前台。</div>
 </div>
