--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -62,7 +62,7 @@
             </div> -->
             <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
-                    <img src="../img/icon/fund.png" class="grid-icon" />
+                    <img src="../img/icon/promotion.svg" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">推广奖励</div>
                 </a>
             </div>
