修改部分文案内容

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -33,7 +33,7 @@
             </div>
             <div class="card-buy-item">
                 <img class="card-buy-item-left" src='img/card/card-award.png' style="width: 50px;height: 48px;" alt="">
-                <div class="card-buy-item-right bs-text-153 bs-text-smaller">每月返还预存金额{{@data.monthReturnAmount}}元, {{@data.totalReturnTimes}}个月返清本金。<br>用户可直接提现或在店内消费。</div>
+                <div class="card-buy-item-right bs-text-153 bs-text-smaller">每月返还预存金额{{@data.monthReturnAmount}}元, {{@data.totalReturnTimes}}个月全额返还预存款。<br>用户可直接提现或在店内消费。</div>
             </div>
             <div class="card-buy-item">
                 <img class="card-buy-item-left" src='img/card/card-promotion.png' style="width: 50px;height: 48px;" alt="">
