--- a/js/pages/promotion/promotion-rule.html
+++ b/js/pages/promotion/promotion-rule.html
@@ -1,7 +1,8 @@
 <div class="content-rule">
     <div class="content-headtitle">推广奖励条例</div>
     <div class="content-title">第一条 活动规则</div>
-    <div class="content-text">1. 用户申请加入本宿推广会员后，即可开通推广套餐。
+    <div class="content-text">1. 
+    用户可以在线申请参加本活动，本宿客服人员审核后将为您开通推广套餐。如果您是本宿的会员用户，则不需要审核，可以直接加入本宿推广奖励计划。
     </div>
     <div class="content-text">2. 用户完成推广套餐每月推广任务即可获得推广奖励，推广任务为转发本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己编辑。
     </div>
@@ -21,8 +22,9 @@
     <div class="content-title">第三条 用户权益</div>
     <div class="content-text">1. 用户通过完成套餐任务后所得的推广奖励，可用于提现或在本宿酒店消费。
     </div>
+    <div class="content-text">2. 用户开通推广奖励服务后，则视为该用户已经取得了本宿兼职工作的权利，在用户按时完成推广工作的前提下，本宿不得以任何理由拒绝支付推广奖励，否则用户有权要求本宿按约定金额双倍赔偿。</div>
     <div class="content-title">第四条 本宿权利</div>
-    <div class="content-text">1. 有权审核、接受或拒绝会员的，在事先通知会员的情况下有权撤销或停止会员的全部或部分服务内容。
+    <div class="content-text">1. 有权审核、接受或拒绝非会员用户的参与申请。
     </div>
     <div class="content-text">2. 有权根据用户而给予不同可选择的推广套餐。
     </div>
