--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -27,8 +27,8 @@ a:active {
 }
 </style>
 <div class="bs-text-white" style="display: flex;flex-wrap: wrap;">
-    <section onclick="goPromotion()" class="goPromotion">
-        <div class="bs-text-x-larger" style="padding: 70px 0 30px 0;">获取推广奖励计划</div>
+    <section onclick="javascript:location.href='card-list.html'" class="goPromotion">
+        <div class="bs-text-x-larger" style="padding: 70px 0 30px 0;">成为本宿VIP会员</div>
         <div class="bs-text-normal">住酒店还能挣钱</div>
     </section>
     <section style="display: flex;flex-grow: 1;">
