--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="bs-text-larger bs-text-gold bs-text-bolder">收益</div>
+                        <div class="bs-text-larger bs-text-gold bs-text-bolder">收入</div>
                         <div class="promotion-detail-content">
                             <div>年收入&nbsp; <span class="bs-text-gold">¥{{el.totalAward}}</span></div>
                             <div>月收入&nbsp; <span class="bs-text-gold">¥{{el.monthAward}}</span></div>
