--- a/js/pages/card/bind.html
+++ b/js/pages/card/bind.html
@@ -13,7 +13,7 @@
         </div>
 
         <div :if="@bindType==2">
-            <input type="text" placeholder="输入您的银行卡号" :duplex="@accountNo">
+            <input type="text" placeholder="输入您的银行卡号" :duplex="@bankNo">
             <input type="text" placeholder="输入您的开户行及支行" :duplex="@bankName">
             <input type="text" placeholder="输入您的开户姓名" :duplex="@accountName">
         </div>
