--- a/js/pages/card/show.html
+++ b/js/pages/card/show.html
@@ -21,7 +21,7 @@
 }
 </style>
 <meta name="format-detection" content="telephone=no">
-<div class="ms-controller" style="padding: 3vw;background-color: #fff;height: 100vh;" :controller="cardShow" >
+<div class="ms-controller" style="background-color: #fff;height: 100vh;" :controller="cardShow" >
     <div class="card-frame" style="background-color: #fff;">
         <div class="card-show" :css="{'background-image': 'url(' + @getType() + ')'}">
             <div class="card-font">
