--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -116,7 +116,7 @@
 			</li>
 		</ul>
 		<div class="mui-content-padded mui-text-center" style="margin-top: 25px">
-			客服电话： <a href="tel:4000-000-000">4000-000-000</a>
+			客服电话： <a ms-attr-href="'tel:'+SERVICECALL">{{SERVICECALL}}</a>
 		</div>
 	</div>
 </div>
