部分文字修改 首页头像在my.js里刷新修改

--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -32,7 +32,7 @@
                     {{el.cashAmount}}
                 </div>
                 <div class="bs-text-x-smaller" style="padding-top: 0.6vh;">
-                    可提现余额
+                    可用余额
                 </div>
                 <button type="button" class="bs-text-gold bs-text-large cash-btn" :on-tap="@openWithdraw(index, el.cashAmount)">提现</button>
             </div>
