钱包页面非会员卡不显示推广奖励累积

--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -49,7 +49,7 @@
                         返现累计
                     </div>
                 </div>
-                <div>
+                <div :if="el.id>0" >
                     <div :if="el.packageStatus==2" class="bs-text-larger bs-text-gold">
                         {{el.totalAwardAmount}}
                     </div>
