--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -19,7 +19,7 @@
             <div style="margin: 20px;">
                 <img src="img/arrow_invite.png" style="width: 50px;position: relative;left: 15vw;">
                 <div class="bs-text-larger" style="line-height: 25px;width: 70vw;">
-                    当您完成本月所有推广后，本月推广奖励将汇入您的会员卡账户。
+                    当您完成本月所有推广后，本月推广奖励将汇入您的本宿钱包账户。
                 </div>
             </div>
             <button type="button" style="border:1px solid #fff;background: rgba(0,0,0,0.5);color: #fff;width: 50%;" :on-tap="@hideMask">知道了</button>
