删除不用的logo图片

--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -56,7 +56,7 @@
                     <div :if="el.packageStatus==1||el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goPromotion(index)">
                         去开通
                     </div>
-                    <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
+                    <div class="bs-text-x-smaller" style="padding-top: 1.2vh;width: 72px;">
                         推广奖励累计
                     </div>
                 </div>
