修订会员条款的错别字

--- a/js/pages/card/card-rule.html
+++ b/js/pages/card/card-rule.html
@@ -22,7 +22,7 @@
     </div>
     <div class="content-text">3. 本宿每月（以 30 天计算）将会返还用户一部份预存金额，黑卡会员返还 2250 元/月，金卡用户返还 800 元/月，银卡用户返还 300 元/月。
     </div>
-    <div class="content-text">4. 本宿返还给会员的金额，会员可以用来提现或是在本宿酒店中消费。会员的提现账号应保证真实有效，如因会员绑定账号所造成的包括但不仅限于无法提现，打款账号错误等一些列损失，本宿概不负责。会员每月仅可提现1次。
+    <div class="content-text">4. 本宿返还给会员的金额，会员可以用来提现或是在本宿酒店中消费。会员的提现账号应保证真实有效，如因会员绑定账号所造成的包括但不仅限于无法提现，打款账号错误等一系列损失，本宿概不负责。会员每月仅可提现1次。
     </div>
     <div class="content-text">5. 本宿会员享受免审核开通推广奖励活动，活动规则详见《推广条例》。
     </div>
