抽奖页面相关文件

--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -82,6 +82,10 @@
                 <img src="../img/wallet.svg" class="grid-icon" />
                 <div class="bs-text-smaller bs-text-black">钱包</div>
             </div>
+            <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="!isManage">
+                <img src="../img/icon/promotion.svg" class="grid-icon" />
+                <div class="bs-text-smaller bs-text-black">抽奖</div>
+            </div>
             <!-- <div class="center-nav-item" ms-visible="!isAdmin&&!isManage"> -->
                 <!-- <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
