抽奖页面task部分样式微调

--- a/js/pages/lottery/lottery.html
+++ b/js/pages/lottery/lottery.html
@@ -106,13 +106,13 @@
             <img ms-attr-src="el.img" alt="" style="width: 40px;margin: 15px;">
         </div>
         <section class="flex-column" style="padding-right: 5px;">
-            <div class="bs-text-large">
+            <div class="bs-text-larger" style="margin-top: 3px;">
                 {{el.name}}
                 <span class="bs-text-smaller">
-                    增送<span class="bs-text-red">{{el.chance}}</span>次
+                    &nbsp;&nbsp;增送<span class="bs-text-red">{{el.chance}}</span>次
                 </span>
             </div>
-            <div class="bs-text-102 bs-text-small">转发本宿相关文章到朋友圈，完成一次推广任务</div>
+            <div class="bs-text-102 bs-text-small" style="    margin: 3px 0;">转发本宿相关文章到朋友圈，完成一次推广任务</div>
             <div class="bs-text-large">
                 +<span class="bs-text-red" style="padding-top: 10px;">{{el.add}}</span> 次抽奖机会</div>
         </section>
