--- a/js/pages/card/introduce.html
+++ b/js/pages/card/introduce.html
@@ -109,9 +109,18 @@
         </div>
     </div>
     <div>
-        <div class="introduce-title" style="margin-top: 15px;">
+        <div class="introduce-title" style="margin-top: 15px; margin-bottom: 30px; border-bottom: 1px solid #ccc; padding-bottom: 20px;">
             <div class="introduce-note">※预存款返还时间：用户交纳预存款之日起15天后初次返，以后每隔30天返还一次。
             <div class="introduce-note">※<span style="color: #baa071">会员卡升级条件为什么要预存款？</span></div>
+        </div>
+    </div>
+    <div>
+        <div class="introduce-title">
+            <div><img src="img/logo.jpg"></div>
+            <div class="introduce-title2">如何获得推广奖励？</div>
+        </div>
+        <div class="introduce-content" style="border: none;">
+            所有会员均可参加本宿的推广奖励计划。普通会员每转发本宿一条微信到自己的朋友圈即可获得1次抽奖机会，每天最多转发一条，每条只能转发一次，每月最高奖励4条；银卡会员每转发本宿一条微信到自己的朋友圈即可获得20元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励3条；金卡会员每转发本宿一条微信到自己的朋友圈即可获得80元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励2条；黑卡会员每转发本宿一条微信到自己的朋友圈即可获得450元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励1条。
         </div>
     </div>
 </div>
