--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -63,7 +63,7 @@
             <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/promotion.svg" class="grid-icon" />
-                    <div class="bs-text-smaller bs-text-black">推广奖励</div>
+                    <div class="bs-text-smaller bs-text-black">推广</div>
                 </a>
             </div>
             <div class="center-nav-item" ms-on-tap="clickA(8)" ms-visible="isAlliance&&!isManage">
@@ -83,7 +83,7 @@
                 <div class="bs-text-smaller bs-text-black">钱包</div>
             </div>
             <div class="center-nav-item" ms-on-tap="clickA(10)" ms-visible="!isManage">
-                <img src="../img/icon/promotion.svg" class="grid-icon" />
+                <img src="../img/icon/gift.svg" class="grid-icon" />
                 <div class="bs-text-smaller bs-text-black">抽奖</div>
             </div>
             <!-- <div class="center-nav-item" ms-visible="!isAdmin&&!isManage"> -->
